fixed the background img

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -3,7 +3,7 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-body{
+html{
     background: url(./Images/backgroundimg.jpg) no-repeat center center fixed;
     background-size: cover;
 }
