--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -179,7 +179,7 @@ background-color: black;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("./Assets/Images/banner.jpg");
+    background-image: url("/Assets/Images/banner.jpg");
     background-size: cover;
     background-position: center bottom;
     background-position-y: 80%;
