--- a/Assets/css/genre.css
+++ b/Assets/css/genre.css
@@ -19,8 +19,8 @@ body {
     color: white;
     display: flex;
     flex-direction: column;
-    height: 200vh;
-    overflow-y: scroll;
+    min-height: 100vh;
+    overflow-y: hidden; 
 }
 
 .navbar {
@@ -59,8 +59,8 @@ body {
     color: inherit;
 }
 .navbar-menu.is-active {
-    max-height: 80vh;  
-    overflow-y: auto; 
+    max-height: 50vh;  
+    overflow-y: auto;  
 }
  
 @media screen and (max-width: 1023px){
@@ -196,9 +196,23 @@ img.movie-poster {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    max-height: 450px;
+   
     margin-bottom: 20px;
 }
+@media screen and (max-width: 1000px){
+    .movie-poster {
+        width: calc(30% - 20px);
+    }
+
+    }
+@media screen and (max-width: 600px){
+    .movie-poster {
+        width: calc(45% - 20px);
+
+    }
+
+    }
+
 
 .movie-poster img {
     width: 100%;
@@ -224,7 +238,7 @@ img.movie-poster {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.7);
+     
     z-index: 1000;
     text-align: center;
     vertical-align: middle;
@@ -261,3 +275,4 @@ img.movie-poster {
      
     height: auto;  
 }
+
