--- a/Assets/css/tvgenre.css
+++ b/Assets/css/tvgenre.css
@@ -19,8 +19,8 @@ body {
     color: white;
     display: flex;
     flex-direction: column;
-    height: 200vh;
-    overflow-y: scroll;
+    min-height: 100vh;
+    overflow-y: hidden; 
 }
 
 .navbar {
@@ -60,7 +60,7 @@ body {
     color: inherit;
 }
 .navbar-menu.is-active {
-    max-height: 80vh;  
+    max-height: 50vh;  
     overflow-y: auto;  
 }
  
@@ -183,6 +183,7 @@ img.movie-poster {
     max-width: 1200px;
 }
 
+
 .genre-movies {
     display: flex;
     flex-wrap: wrap;
@@ -197,9 +198,30 @@ img.movie-poster {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    max-height: 450px;
+ 
     margin-bottom: 20px;
 }
+.tv-show-poster{
+    width: calc(20% - 20px);
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+   
+    margin-bottom: 20px;
+}
+@media screen and (max-width: 1000px){
+    .tv-show-poster {
+        width: calc(30% - 20px);
+    }
+
+    }
+@media screen and (max-width: 600px){
+    .tv-show-poster {
+        width: calc(45% - 20px);
+
+    }
+
+    }
 
 .tv-show-poster img {
     width: 100%;
@@ -227,7 +249,7 @@ img.movie-poster {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.7);
+    
     z-index: 1000;
     text-align: center;
     vertical-align: middle;
@@ -255,5 +277,6 @@ img.movie-poster {
     font-size: 18px;
     margin-left: 10px;
 }
+
 
  
